# lifesheet-api

./: Cargo.toml  LICENSE  README.md
migrations/2022-12-31-004909_setup/: down.sql  up.sql
migrations/2023-01-04-173649_seed/: down.sql  up.sql
src/: main.rs  schema.rs
