[package]
name = "lifesheet-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.0"
authors = ["Noel Espino <hi@ednoesco.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
diesel = { version = "2.0.2", features = ["mysql"] }
dotenvy = "0.15.6"
